weather/dwd: don't crash on empty json objects

before calling .first() we need to make sure the map isn't empty

BUG: 481596
(cherry picked from commit 4b1765959111bff449942643abe68ddc3ecba74a)